# MCP_A2A

./: .gitignore  README.md  pr-review-gemini.md  pyproject.toml  run_tests.bat  run_tests.py  run_tests.sh  test_context_fix.py
a2a_mcp_server/: __init__.py  __main__.py  pipeline.py  server.py
a2a_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
a2a_mcp_server/pipeline/: __init__.py  definition.py  engine.py
a2a_mcp_server/utils/: __init__.py  context.py  errors.py
agents/: README.md  client.py  requirements.txt
agents/agent_1/: agent.py
agents/agent_1/.well-known/: agent.json
agents/agent_2/: agent.py
agents/agent_2/.well-known/: agent.json
tests/: conftest.py  requirements-test.txt
tests/e2e/: test_agent_workflows.py
tests/fixtures/: mock_agents.py  mock_context.py  pipeline_templates.py
tests/integration/: test_agent_communication.py  test_fastmcp_integration.py  test_pipeline_execution.py
tests/unit/: test_pipeline_definition.py  test_server_state.py  test_update_throttler.py
