[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a_mcp_server"
version = "0.1.0"
description = "MCP server for A2A agent registry and communication"
authors = [
    {name = "A2A MCP Team"}
]
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "fastmcp>=2.0.0",
    "a2a_min",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
]

[project.scripts]
a2a-mcp-server = "a2a_mcp_server.server:main_cli"

[tool.setuptools]
packages = ["a2a_mcp_server"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
timeout = 10
